--- a/models/gold/protocols/olas/olas__ez_olas_locking.yml
+++ b/models/gold/protocols/olas/olas__ez_olas_locking.yml
@@ -22,7 +22,7 @@ models:
       - name: EVENT_INDEX
         description: '{{ doc("cross_chain_event_index") }}'
       - name: EVENT_NAME
-        description: '{{ doc("eth_event_name") }}'
+        description: '{{ doc("cross_chain_event_name") }}'
       - name: ACCOUNT_ADDRESS
         description: '{{ doc("olas_account_address") }}'
       - name: OLAS_AMOUNT_UNADJ
