--- a/models/gold/protocols/olas/olas__fact_service_event_logs.yml
+++ b/models/gold/protocols/olas/olas__fact_service_event_logs.yml
@@ -28,15 +28,15 @@ models:
       - name: SERVICE_ID
         description: '{{ doc("olas_service_id") }}'
       - name: TOPIC_0
-        description: '{{ doc("gno_topics") }}'
+        description: '{{ doc("cross_chain_topics") }}'
       - name: TOPIC_1
-        description: '{{ doc("gno_topics") }}'
+        description: '{{ doc("cross_chain_topics") }}'
       - name: TOPIC_2
-        description: '{{ doc("gno_topics") }}'
+        description: '{{ doc("cross_chain_topics") }}'
       - name: TOPIC_3
-        description: '{{ doc("gno_topics") }}'
+        description: '{{ doc("cross_chain_topics") }}'
       - name: DATA
-        description: '{{ doc("gno_logs_data") }}'
+        description: '{{ doc("cross_chain_event_data") }}'
       - name: SEGMENTED_DATA
         description: '{{ doc("olas_segmented_data") }}'
       - name: FACT_SERVICE_EVENT_LOGS_ID
