--- a/models/sources.yml
+++ b/models/sources.yml
@@ -883,7 +883,7 @@ sources:
       - name: service_event_logs
       - name: service_registrations
   - name: solana_silver_olas
-    database: solana_dev
+    database: solana
     schema: silver_olas
     tables:
       - name: registry_metadata_complete
