--- a/models/sources.yml
+++ b/models/sources.yml
@@ -492,6 +492,14 @@ sources:
       - name: receipts_completeness
       - name: traces_completeness
       - name: transactions_completeness
+  - name: kaia_observ
+    database: kaia
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: logs_completeness
+      - name: receipts_completeness
+      - name: traces_completeness
   - name: arbitrum_observ
     database: arbitrum
     schema: silver_observability
