--- a/.github/workflows/dbt_docs_update.yml
+++ b/.github/workflows/dbt_docs_update.yml
@@ -16,6 +16,10 @@ env:
   DATABASE: "${{ vars.DATABASE }}"
   WAREHOUSE: "${{ vars.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
+
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
   
 jobs:
   scheduled_run:
