--- a/.github/workflows/dbt_run_deployment.yml
+++ b/.github/workflows/dbt_run_deployment.yml
@@ -31,6 +31,10 @@ env:
   WAREHOUSE: "${{ inputs.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 
 jobs:
   dbt:
