--- a/.github/workflows/dbt_run_scheduled_daily.yml
+++ b/.github/workflows/dbt_run_scheduled_daily.yml
@@ -19,6 +19,10 @@ env:
   WAREHOUSE: "${{ vars.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
   called_workflow_template:
     uses: FlipsideCrypto/analytics-workflow-templates/.github/workflows/dbt_run_template.yml@main
