--- a/.github/workflows/dbt_run_scheduled_prices.yml
+++ b/.github/workflows/dbt_run_scheduled_prices.yml
@@ -18,6 +18,10 @@ env:
   WAREHOUSE: "${{ vars.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
   run_dbt_jobs:
     runs-on: ubuntu-latest
