--- a/.github/workflows/dbt_run_scheduled_weekly.yml
+++ b/.github/workflows/dbt_run_scheduled_weekly.yml
@@ -19,6 +19,10 @@ env:
   WAREHOUSE: "${{ vars.WAREHOUSE }}"
   SCHEMA: "${{ vars.SCHEMA }}"
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
 jobs:
   run_dbt_jobs:
     runs-on: ubuntu-latest
