--- a/models/sources.yml
+++ b/models/sources.yml
@@ -810,6 +810,11 @@ sources:
     schema: stats
     tables:
       - name: ez_core_metrics_hourly
+  - name: eclipse_stats
+    database: eclipse
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
   - name: blast_silver
     database: blast
     schema: silver
