--- a/models/silver/labels/contract_autolabel/flow_evm/silver__flow_evm_fs_token_labels.yml
+++ b/models/silver/labels/contract_autolabel/flow_evm/silver__flow_evm_fs_token_labels.yml
@@ -1,10 +1,6 @@
 version: 2
 models:
   - name: silver__flow_evm_fs_token_labels
-    tests:
-      - dbt_utils.unique_combination_of_columns:
-          combination_of_columns:
-            - ADDRESS
     columns:
       - name: BLOCKCHAIN
         description: The name of the blockchain
@@ -16,6 +12,7 @@ models:
         description: Address that the label is for. This is the field that should be used to join other tables with labels. 
         tests:
           - not_null
+          - unique
           - dbt_expectations.expect_column_values_to_be_in_type_list:
               column_type_list:
                 - STRING
