--- a/models/sources.yml
+++ b/models/sources.yml
@@ -959,3 +959,15 @@ sources:
     schema: silver_testnet
     tables:
       - name: abis
+   - name: aleo_stats
+    database: aleo
+    schema: stats
+    tables:
+      - name: ez_core_metrics_hourly
+  - name: aleo_observ
+    database: aleo
+    schema: silver_observability
+    tables:
+      - name: blocks_completeness
+      - name: transactions_completeness
+      - name: transitions_completeness
