--- a/.github/workflows/dbt_repo_activity_contributors_weekly.yml
+++ b/.github/workflows/dbt_repo_activity_contributors_weekly.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v1
         with:
-          python-version: "3.10.x"
+          python-version: "3.9.20"
 
       - name: install dependencies
         run: |
