--- a/models/sources.yml
+++ b/models/sources.yml
@@ -164,6 +164,11 @@ sources:
     tables:
       - name: ez_dex_swaps
       - name: ez_bridge_activity
+      - name: ez_lending_borrows
+      - name: ez_lending_deposits
+      - name: ez_lending_liquidations
+      - name: ez_lending_repayments
+      - name: ez_lending_withdraws
   - name: polygon_silver
     database: polygon
     schema: silver
