--- a/models/sources.yml
+++ b/models/sources.yml
@@ -999,6 +999,17 @@ sources:
     schema: testnet
     tables:
       - name: dim_contracts
+  - name: ronin_silver
+    database: ronin
+    schema: silver
+    tables:
+      - name: abis
+      - name: complete_event_abis
+  - name: ronin_core
+    database: ronin
+    schema: core
+    tables:
+      - name: dim_contracts
   - name: aleo_stats
     database: aleo
     schema: stats
