--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1010,6 +1010,17 @@ sources:
     schema: core
     tables:
       - name: dim_contracts
+  - name: swell_silver
+    database: swell
+    schema: silver
+    tables:
+      - name: abis
+      - name: complete_event_abis
+  - name: swell_core
+    database: swell
+    schema: core
+    tables:
+      - name: dim_contracts
   - name: aleo_stats
     database: aleo
     schema: stats
