--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -1,5 +1,5 @@
 name: dbt_run_adhoc
-run-name: dbt_run_adhoc
+run-name: ${{ inputs.dbt_command }}
 
 on:
   workflow_dispatch:
@@ -30,16 +30,17 @@ on:
         required: true
     
 env:
-  DBT_PROFILES_DIR: ./
-
-  ACCOUNT: "${{ vars.ACCOUNT }}"
-  ROLE: "${{ vars.ROLE }}"
-  USER: "${{ vars.USER }}"
-  PASSWORD: "${{ secrets.PASSWORD }}"
-  REGION: "${{ vars.REGION }}"
-  DATABASE: "${{ vars.DATABASE }}"
-  WAREHOUSE: "${{ inputs.warehouse }}"
-  SCHEMA: "${{ vars.SCHEMA }}"
+    USE_VARS: "${{ vars.USE_VARS }}"
+    DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
+    DBT_VERSION: "${{ vars.DBT_VERSION }}"
+    ACCOUNT: "${{ vars.ACCOUNT }}"
+    ROLE: "${{ vars.ROLE }}"
+    USER: "${{ vars.USER }}"
+    PASSWORD: "${{ secrets.PASSWORD }}"
+    REGION: "${{ vars.REGION }}"
+    DATABASE: "${{ vars.DATABASE }}"
+    WAREHOUSE: "${{ inputs.warehouse }}"
+    SCHEMA: "${{ vars.SCHEMA }}"
 
 concurrency:
   group: ${{ github.workflow }}
