--- a/.github/workflows/dbt_run_adhoc.yml
+++ b/.github/workflows/dbt_run_adhoc.yml
@@ -1,10 +1,13 @@
 name: dbt_run_adhoc
 run-name: ${{ inputs.dbt_command }}
+
 on:
   workflow_dispatch:
+    branches:
+      - "main"
     inputs:
       environment:
-        type: choice
+        type: choice 
         description: DBT Run Environment
         required: true
         options:
@@ -12,9 +15,9 @@ on:
           - prod
         default: dev
       warehouse:
-        type: choice
+        type: choice 
         description: Snowflake warehouse
-        required: true
+        required: true 
         options:
           - DBT
           - DBT_CLOUD
@@ -25,6 +28,7 @@ on:
         type: string
         description: 'DBT Run Command'
         required: true
+    
 env:
     USE_VARS: "${{ vars.USE_VARS }}"
     DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
@@ -40,16 +44,18 @@ env:
 
 concurrency:
   group: ${{ github.workflow }}
-    
 
-  
+
+
 jobs:
   run_dbt_jobs:
     runs-on: ubuntu-latest
-    environment:
+    environment: 
       name: workflow_${{ inputs.environment }}
+
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
@@ -62,8 +68,3 @@ jobs:
       - name: Run DBT Jobs
         run: |
           ${{ inputs.dbt_command }}
-      - name: Store logs
-        uses: actions/upload-artifact@v3
-        with:
-          name: dbt-logs
-          path: logs
